[tool.poetry]
name = "hotel-rate-management"
version = "0.1.0"
description = "Hotel Room Rate Management System"
authors = ["Jatin Yadav <jatinyadav154@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
mysql-connector-python = "^8.4.0"
alembic = "^1.13.1"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
